--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -12,5 +12,6 @@
         <Button x:Name="btnTest" Content="Visa barn" HorizontalAlignment="Left" Margin="373,15,0,0" VerticalAlignment="Top" Width="75" Click="BtnTest_Click"/>
         <ComboBox x:Name="cmbBoxBarn" HorizontalAlignment="Left" Margin="373,56,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CmbBoxBarn_SelectionChanged"/>
         <Button Content="Personal" HorizontalAlignment="Left" Margin="570,345,0,0" VerticalAlignment="Top" Width="190" Click="btn_personalWindow" Height="40"/>
+        <Button x:Name="btnSchedule" Content="Schemaläggning" HorizontalAlignment="Left" Margin="570,38,0,0" VerticalAlignment="Top" Width="190" Click="btnClickSchedule" Height="40"/>
     </Grid>
 </Window>
