--- a/WpfApp1/personalWindow.xaml
+++ b/WpfApp1/personalWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="personalWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Vårdnadshavare" HorizontalAlignment="Left" Margin="575,350,0,0" VerticalAlignment="Top" Width="190" Click="btn_vardWindow" Height="40"/>
+        <Button Content="Vårdnadshavarvyn" HorizontalAlignment="Left" Margin="575,350,0,0" VerticalAlignment="Top" Width="190" Click="btn_vardWindow" Height="40"/>
         <ListBox x:Name="listBoxPersonal" HorizontalAlignment="Left" Height="150" Margin="33,55,0,0" VerticalAlignment="Top" Width="227" SelectionChanged="ListBoxPersonal_SelectionChanged"/>
         <Label x:Name="label" Content="Personallista" HorizontalAlignment="Left" Margin="104,24,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="Barn på avdelning " HorizontalAlignment="Left" Margin="341,19,0,0" VerticalAlignment="Top"/>
@@ -29,7 +29,9 @@
         <Label x:Name="label2" Content="Vårdnadshavare till" HorizontalAlignment="Left" Margin="60,270,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblBarnNamn" Content="" HorizontalAlignment="Left" Margin="170,270,0,0" VerticalAlignment="Top"/>
         
-        <Button Content="Schema" HorizontalAlignment="Left" Margin="575,290,0,0" VerticalAlignment="Top" Width="190" Height="40" Click="Btn_SchemaWindow"/>
+        <Button Content="Schema för valt barn" HorizontalAlignment="Left" Margin="575,276,0,0" VerticalAlignment="Top" Width="190" Height="40" Click="Btn_SchemaWindow"/>
+        <CheckBox x:Name="checkBoxHem" Content="Barn har gått hem" HorizontalAlignment="Left" Margin="293,225,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnRegister" Content="Registrera hemgång" HorizontalAlignment="Left" Margin="425,216,0,0" VerticalAlignment="Top" Width="125" Height="33" Click="BtnRegister_Click"/>
 
     </Grid>
 </Window>
