--- a/WpfApp1/personalWindow.xaml
+++ b/WpfApp1/personalWindow.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="personalWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Vårdnadshavarvyn" HorizontalAlignment="Left" Margin="575,350,0,0" VerticalAlignment="Top" Width="190" Click="btn_vardWindow" Height="40"/>
+        <Button Content="Vårdnadshavarvyn" HorizontalAlignment="Left" Margin="592,369,0,0" VerticalAlignment="Top" Width="190" Click="btn_vardWindow" Height="40"/>
         <ListBox x:Name="listBoxPersonal" HorizontalAlignment="Left" Height="150" Margin="33,55,0,0" VerticalAlignment="Top" Width="227" SelectionChanged="ListBoxPersonal_SelectionChanged"/>
         <Label x:Name="label" Content="Personallista" HorizontalAlignment="Left" Margin="104,24,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="Barn på avdelning " HorizontalAlignment="Left" Margin="341,19,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblAvdelning" Content="" HorizontalAlignment="Left" Margin="440,19,0,0" VerticalAlignment="Top"/>
 
-        <ListView x:Name="listViewBarn" ItemsSource="{Binding barn}" HorizontalAlignment="Left" Height="150" Margin="293,55,0,0" VerticalAlignment="Top" Width="457" SelectionChanged="ListViewBarn_SelectionChanged_1">
+        <ListView x:Name="listViewBarn" ItemsSource="{Binding barn}" HorizontalAlignment="Left" Height="150" Margin="293,55,0,0" VerticalAlignment="Top" Width="292" SelectionChanged="ListViewBarn_SelectionChanged_1">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="ID" Width="91" DisplayMemberBinding="{Binding Id}"/>
@@ -28,10 +28,15 @@
         <ListBox x:Name="listBoxVard" HorizontalAlignment="Left" Height="54" Margin="33,301,0,0" VerticalAlignment="Top" Width="292"/>
         <Label x:Name="label2" Content="Vårdnadshavare till" HorizontalAlignment="Left" Margin="60,270,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblBarnNamn" Content="" HorizontalAlignment="Left" Margin="170,270,0,0" VerticalAlignment="Top"/>
+
+        <Button Content="Schema för valt barn" HorizontalAlignment="Left" Margin="605,120,0,0" VerticalAlignment="Top" Width="173" Height="40" Click="Btn_SchemaWindow"/>
+        <CheckBox x:Name="checkBoxHem" Content="Barn har gått hem" HorizontalAlignment="Left" Margin="293,218,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnRegister" Content="Registrera hemgång" HorizontalAlignment="Left" Margin="259,249,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnRegister_Click"/>
         
-        <Button Content="Schema för valt barn" HorizontalAlignment="Left" Margin="575,276,0,0" VerticalAlignment="Top" Width="190" Height="40" Click="Btn_SchemaWindow"/>
-        <CheckBox x:Name="checkBoxHem" Content="Barn har gått hem" HorizontalAlignment="Left" Margin="293,225,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnRegister" Content="Registrera hemgång" HorizontalAlignment="Left" Margin="425,216,0,0" VerticalAlignment="Top" Width="125" Height="33" Click="BtnRegister_Click"/>
+        <Button x:Name="btnAway" Content="Anmäl frånvaro" HorizontalAlignment="Left" Margin="490,280,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnAway_Click"/>
+        <TextBox x:Name="textBoxDate" HorizontalAlignment="Left" Height="23" Margin="531,249,0,0" TextWrapping="Wrap" Text="yyyy-mm-dd" VerticalAlignment="Top" Width="120"/>
+        <CheckBox x:Name="checkBoxLedig" Content="Ledig" HorizontalAlignment="Left" Margin="531,221,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBoxSjuk" Content="Sjuk" HorizontalAlignment="Left" Margin="609,221,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
