--- a/WpfApp1/SchemaWin.xaml
+++ b/WpfApp1/SchemaWin.xaml
@@ -5,10 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="SchemaWin" Height="450" Width="800">
+        Title="SchemaWin" Height="450" Width="800" Closing="Window_Closing">
     <Grid>
-        <Button x:Name="btnVårdnadshavare" Content="Vårdnadshavare" HorizontalAlignment="Left" Margin="533,343,0,0" VerticalAlignment="Top" Width="238" Height="41" Click="Button_Click"/>
-        <ListView x:Name="lstviewSchema" HorizontalAlignment="Left" Height="328" Margin="10,10,0,0" VerticalAlignment="Top" Width="774">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="775*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <ListView x:Name="lstviewSchema" HorizontalAlignment="Left" Height="399" Margin="8,10,0,0" VerticalAlignment="Top" Width="774" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Narvarande" Width="130" DisplayMemberBinding="{Binding Narvarodag}"/>
