--- a/WpfApp1/SchemaWin.xaml
+++ b/WpfApp1/SchemaWin.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="SchemaWin" Height="450" Width="800" Closing="Window_Closing">
+        Title="SchemaWin" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="775*"/>
