--- a/WpfApp1/personalWindow.xaml
+++ b/WpfApp1/personalWindow.xaml
@@ -27,9 +27,9 @@
         <Label x:Name="label2" Content="Vårdnadshavare till" HorizontalAlignment="Left" Margin="60,270,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblBarnNamn" Content="" HorizontalAlignment="Left" Margin="170,270,0,0" VerticalAlignment="Top"/>
 
-        <Button Content="Schema för valt barn" HorizontalAlignment="Left" Margin="605,120,0,0" VerticalAlignment="Top" Width="173" Height="40" Click="Btn_SchemaWindow"/>
-        <CheckBox x:Name="checkBoxHem" Content="Barn har gått hem" HorizontalAlignment="Left" Margin="293,218,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnRegister" Content="Registrera hemgång" HorizontalAlignment="Left" Margin="259,249,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnRegister_Click"/>
+        <Button Content="Schema för valt barn" HorizontalAlignment="Left" Margin="601,70,0,0" VerticalAlignment="Top" Width="173" Height="40" Click="Btn_SchemaWindow"/>
+        <CheckBox x:Name="checkBoxHem" Content="Barn har gått hem" HorizontalAlignment="Left" Margin="293,213,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnRegister" Content="Registrera hemgång" HorizontalAlignment="Left" Margin="293,233,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnRegister_Click"/>
         <ListView x:Name="listViewVard" ItemsSource="{Binding vardnadshavare}" HorizontalAlignment="Left" Height="100" Margin="33,301,0,0" VerticalAlignment="Top" Width="295">
             <ListView.View>
                 <GridView>
@@ -39,6 +39,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="btnHome" Content="Hemgångna barn" HorizontalAlignment="Left" Margin="479,249,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnHome_Click"/>
+        <Button x:Name="btnHome" Content="Hemgångna barn" HorizontalAlignment="Left" Margin="601,157,0,0" VerticalAlignment="Top" Width="173" Height="33" Click="BtnHome_Click"/>
+        <CheckBox x:Name="checkBoxFranvaro" Content="Barn är frånvarande" HorizontalAlignment="Left" Margin="544,213,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnFranvaro" Content="Registrera frånvaro" HorizontalAlignment="Left" Margin="544,233,0,0" VerticalAlignment="Top" Width="191" Height="33" Click="BtnFranvaro_Click"/>
     </Grid>
 </Window>
