--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -6,11 +6,29 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FFE5F4FD">
         <Button x:Name="btnVardnadshavare" Content="Visa Vårdnadshavare" HorizontalAlignment="Left" Margin="33,16,0,0" VerticalAlignment="Top" Width="227" Click="BtnVardnadshavare_Click" Height="40"/>
-        <ListBox x:Name="listBox1" HorizontalAlignment="Left" Height="246" Margin="33,70,0,0" VerticalAlignment="Top" Width="227" SelectionChanged="ListBox1_SelectionChanged" />
-        <ComboBox x:Name="cmbBoxBarn" HorizontalAlignment="Left" Margin="310,70,0,0" VerticalAlignment="Top" Width="145" Height="50"/>
-        <Button Content="Personalvyn" HorizontalAlignment="Left" Margin="165,350,0,0" VerticalAlignment="Top" Width="190" Click="btn_personalWindow" Height="40" Background="#FFD6F319" FontWeight="Bold" FontSize="16"/>
+        <ListBox x:Name="listBox1" HorizontalAlignment="Left" Height="246" Margin="33,70,0,0" VerticalAlignment="Top" Width="227" SelectionChanged="ListBox1_SelectionChanged" >
+            <ListBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFD6D1D1" Offset="0.698"/>
+                    <GradientStop Color="#FFF1EAEA" Offset="1"/>
+                </LinearGradientBrush>
+            </ListBox.Background>
+        </ListBox>
+        <ComboBox x:Name="cmbBoxBarn" HorizontalAlignment="Left" Margin="310,90,0,0" VerticalAlignment="Top" Width="145" Height="50" SelectionChanged="CmbBoxBarn_SelectionChanged" BorderBrush="#FF0A0909" FontSize="16">
+            <ComboBox.Background>
+                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
+                    <GradientStop Color="#FFDED5D5" Offset="1"/>
+                </LinearGradientBrush>
+            </ComboBox.Background>
+        </ComboBox>
+        <Button Content="Personalvyn" HorizontalAlignment="Left" Margin="33,360,0,0" VerticalAlignment="Top" Width="190" Click="btn_personalWindow" Height="40" Background="#FF0C0E02" FontWeight="Bold" FontSize="16" Foreground="#FFFBF5F5">
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
         <Button x:Name="BtnSchema" Content="Gå till schema" HorizontalAlignment="Left" Margin="310,166,0,0" VerticalAlignment="Top" Width="145" Click="BtnSchema_Click" Height="45"/>
 
         <Button x:Name="btnAway" Content="Registrera dag" HorizontalAlignment="Left" Margin="535,95,0,0" VerticalAlignment="Top" Width="195" Height="45" Click="BtnAway_Click"/>
@@ -20,9 +38,9 @@
         <CheckBox x:Name="checkBoxNarvaro" Content="Närvaro" HorizontalAlignment="Left" Margin="539,26,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="rdBtnFrukostJa" Content="Ja" HorizontalAlignment="Left" Margin="585,193,0,0" VerticalAlignment="Top" />
         <RadioButton x:Name="rdBtnFrukostNej" Content="Nej" HorizontalAlignment="Left" Margin="648,193,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnFrukost" Content="Registrera frukost" HorizontalAlignment="Left" Margin="556,223,0,0" VerticalAlignment="Top" Width="159" Height="44" Click="BtnFrukost_Click"/>
+        <Button x:Name="btnFrukost" Content="Registrera frukost" HorizontalAlignment="Left" Margin="539,225,0,0" VerticalAlignment="Top" Width="195" Height="44" Click="BtnFrukost_Click"/>
         <Label x:Name="label" Content="Vill ditt barn äta frukost?" HorizontalAlignment="Left" Margin="571,152,0,0" VerticalAlignment="Top" Width="144"/>
-        <Button x:Name="btnFarHamta" Content="Registrera kommentar" HorizontalAlignment="Left" Margin="560,345,0,0" VerticalAlignment="Top" Width="158" Height="40" RenderTransformOrigin="0.5,0.5" Click="BtnFarHamta_Click">
+        <Button x:Name="btnFarHamta" Content="Registrera kommentar" HorizontalAlignment="Left" Margin="540,355,0,0" VerticalAlignment="Top" Width="195" Height="40" RenderTransformOrigin="0.5,0.5" Click="BtnFarHamta_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -33,7 +51,8 @@
             </Button.RenderTransform>
         </Button>
         <TextBox x:Name="txtFarHamta" HorizontalAlignment="Left" Height="34" Margin="535,305,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="208"/>
-        <Border BorderBrush="#FFF31111" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="505,10,0,0" VerticalAlignment="Top" Width="255"/>
+        <Border BorderBrush="#FF1423BF" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="505,16,0,0" VerticalAlignment="Top" Width="255"/>
         <Label x:Name="label1" Content="Vem får hämta ditt barn?" HorizontalAlignment="Left" Margin="571,274,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblBarnNamn" Content="" HorizontalAlignment="Left" Margin="285,26,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.132,0.346" FontSize="20"/>
     </Grid>
 </Window>
