--- a/WpfApp1/AdmWinBarn.xaml
+++ b/WpfApp1/AdmWinBarn.xaml
@@ -17,7 +17,7 @@
         <Label x:Name="label1_Copy" Content="Barnets efternamn" HorizontalAlignment="Left" Margin="341,115,0,0" VerticalAlignment="Top" FontStyle="Italic" FontSize="10"/>
         <Label x:Name="label1_Copy1" Content="Barnets lokal" HorizontalAlignment="Left" Margin="341,162,0,0" VerticalAlignment="Top" FontStyle="Italic" FontSize="10"/>
         <Label x:Name="label2" Content="Registrera nytt barn" HorizontalAlignment="Left" Margin="341,35,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnKopplaWin" Content="Koppla Barn och VH" HorizontalAlignment="Left" Margin="341,340,0,0" VerticalAlignment="Top" Width="149" Height="34"/>
+        <Button x:Name="btnKopplaWin" Content="Koppla Barn och VH" HorizontalAlignment="Left" Margin="341,340,0,0" VerticalAlignment="Top" Width="149" Height="34" Click="btnKopplaWin_Click"/>
         <TextBox x:Name="txtBavd" HorizontalAlignment="Left" Height="23" Margin="341,232,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="label1_Copy2" Content="Barnets avdelning" HorizontalAlignment="Left" Margin="341,209,0,0" VerticalAlignment="Top" FontStyle="Italic" FontSize="10"/>
 
